--- a/templates/index.html
+++ b/templates/index.html
@@ -6,35 +6,36 @@
     <link rel="stylesheet" href="/assets/css/uikit.min.css">
     <link rel="stylesheet" href="/assets/css/uikit-rtl.min.css">
     <link rel="stylesheet" href="/assets/css/main.css">
+    <script src="/assets/js/jquery.min.js"></script>
     <script src="/assets/js/uikit-icons.min.js"></script>
     <script src="/assets/js/uikit.min.js"></script>
     <script src="/assets/js/main.js"></script>
 </head>
 <body>
-    <div class="wrapper">
-        <div class="uk-container">
-            <nav class="uk-navbar-container uk-margin" uk-navbar>
-                <div class="uk-navbar-left">
-                    <a class="uk-navbar-item uk-logo" href="#">itWiki</a>
-                    <ul class="uk-navbar-nav">
-                        <li>
-                            <a href="#">Categories</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="uk-navbar-right">
-                    <div class="uk-navbar-item ">
-                        <div><a href="#">Log In <span uk-icon="heart"></span></a></div>
+    <div class="wrapper uk-background-muted">
+        <div class="navbar-wrapper dark-background">
+            <div class="uk-container">
+                <nav class="uk-navbar-container dark-background uk-light uk-margin" uk-navbar>
+                    <div class="uk-navbar-left">
+                        <ul class="uk-navbar-nav">
+                            <li>
+                                <a href="/add/article/">Add article</a>
+                            </li>
+                        </ul>
                     </div>
-                </div>
-            </nav>
+                    <div class="uk-navbar-right">
+                        <div class="uk-navbar-item ">
+                            <div><a href="#">LOG IN <span uk-icon="heart"></span></a></div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
         </div>
         <div class="uk-container">
-            <div class="uk-article">
-                <h2 class="uk-article-title">Welcome to the front page of your wiki</h2>
-                <p>Currently there is:</p>
-                <p><span id="itwiki_categories">0</span> categories</p>
-                <p><span id="itwiki_articles">0</span> articles</p>
+            
+        </div>
+        <div class="uk-container">
+            <div class="uk-child-width-1-2@m uk-grid-small uk-grid-match" id="itwiki_frontpage_cards" uk-grid>
             </div>
         </div>
     </div>
