--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,3 +4,30 @@
 .dark-background{
     background-color: rgb(21,31,39) !important;
 }
+#itwiki_article_title{
+    display: inline;
+    margin-top: 20px;
+    margin-right: 20px;
+}
+
+#itwiki_article_settings:hover{
+    color: blue;
+}
+
+.fix-width > li {
+    min-width: 170px;
+}
+
+#itwiki_category_table {
+    text-align: right;
+}
+
+.fix-top-margin{
+    margin-top: 15px;
+}
+
+.rounded{
+    border-radius: 50%;
+    min-width: 150px;
+    min-height: 150px;
+}
