--- a/templates/article.html
+++ b/templates/article.html
@@ -7,43 +7,69 @@
     <link rel="stylesheet" href="/assets/css/uikit-rtl.min.css">
     <link rel="stylesheet" href="/assets/css/main.css">
     <script src="/assets/js/jquery.min.js"></script>
-    <script src="/assets/js/uikit-icons.min.js"></script>
     <script src="/assets/js/uikit.min.js"></script>
+    <script src="/assets/js/fontawesome.js"></script>
     <script src="/assets/js/main.js"></script>
 </head>
 <body>
-    <div class="navbar-wrapper dark-background">
-        <div class="uk-container">
-            <nav class="uk-navbar-container dark-background uk-light uk-margin" uk-navbar>
-                <div class="uk-navbar-left">
-                    <ul class="uk-navbar-nav">
-                        <li>
-                            <a href="/add/article/">Add article</a>
-                        </li>
+    <div class="wrapper uk-background-muted">
+        <div class="navbar-wrapper dark-background">
+            <div class="uk-container">
+                <nav class="uk-navbar-container dark-background uk-light uk-margin" uk-navbar>
+                    <div class="uk-navbar-left">
+                        <a href="/" class="uk-navbar-item uk-logo">itWiki</a>
+                        <ul class="uk-navbar-nav">
+                            <li>
+                                <a href="/add/article/">Add article</a>
+                            </li>
+                            <li>
+                                <a href="/settings/">Settings</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="uk-navbar-right">
+                        <div class="uk-navbar-item ">
+                            <div><a href="#">LOG IN</a></div>
+                        </div>
+                    </div>
+                </nav>
+            </div>
+        </div>
+        <div class="uk-container uk-card-default fix-top-margin">
+            <article class="uk-article uk-card-body">
+                <h1 class="uk-article-title" id="itwiki_article_title">{{.Title}}</h1>
+                <i class="fas fa-cog fa-2x uk-align-right" id="itwiki_article_settings"></i>
+                <div uk-dropdown="mode: click">
+                    <ul class="uk-nav uk-dropdown-nav">
+                        <li class="uk-nav-header">Actions</li>
+                        <li><a href="/edit/article/{{.ArticleID}}">Edit</a></li>
+                        <li><a href="#">Vote</a></li>
+                        <li class="uk-nav-header">Danger zone</li>
+                        <li><a href="#itwiki_modal_delete_article" uk-toggle >Delete article</a></li>
                     </ul>
                 </div>
-                <div class="uk-navbar-right">
-                    <div class="uk-navbar-item ">
-                        <div><a href="#">LOG IN <span uk-icon="heart"></span></a></div>
+                <p class="uk-article-meta">Created at {{.CreationDate}} by admin. Category: {{.CategoryName}}</p>
+                <p>{{.Post}}</p>
+                <div class="uk-grid-small uk-child-width-auto" uk-grid>
+                    <div>
+                        <a class="uk-button uk-button-text" href="/">Back</a>
+                    </div>
+                    <div>
+                        <a class="uk-button uk-button-text" href="#">Comments</a>
                     </div>
                 </div>
-            </nav>
+            </article>
         </div>
     </div>
-    <div class="uk-container">
-        <article class="uk-article">
-            <h1 class="uk-article-title">{{.Title}}</h1>
-            <p class="uk-article-meta">Created at {{.CreationDate}} by . Category: {{.CategoryName}}</p>
-            <p>{{.Post}}</p>
-            <div class="uk-grid-small uk-child-width-auto" uk-grid>
-                <div>
-                    <a class="uk-button uk-button-text" href="/">Back</a>
-                </div>
-                <div>
-                    <a class="uk-button uk-button-text" href="#">Comments</a>
-                </div>
-            </div>
-        </article>
+    <div id="itwiki_modal_delete_article" uk-modal>
+        <div class="uk-modal-dialog uk-modal-body">
+            <h2 class="uk-modal-title">Delete article?</h2>
+            <p>You're going to remove article <strong>{{.Title}}</strong> from database</p>
+            <p class="uk-text-right">
+                <button class="uk-button uk-button-default uk-modal-close" type="button">Cancel</button>
+                <button class="uk-button uk-button-danger" id="itwiki_article_settings_delete_article" data-id="{{.ArticleID}}" type="button">Delete</button>
+            </p>
+        </div>
     </div>
 </body>
 </html>
