--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="/assets/css/uikit-rtl.min.css">
     <link rel="stylesheet" href="/assets/css/main.css">
     <script src="/assets/js/jquery.min.js"></script>
-    <script src="/assets/js/uikit-icons.min.js"></script>
     <script src="/assets/js/uikit.min.js"></script>
+    <script src="/assets/js/fontawesome.js"></script>
     <script src="/assets/js/main.js"></script>
 </head>
 <body>
@@ -17,24 +17,25 @@
             <div class="uk-container">
                 <nav class="uk-navbar-container dark-background uk-light uk-margin" uk-navbar>
                     <div class="uk-navbar-left">
+                        <a href="/" class="uk-navbar-item uk-logo">itWiki</a>
                         <ul class="uk-navbar-nav">
                             <li>
                                 <a href="/add/article/">Add article</a>
+                            </li>
+                            <li>
+                                <a href="/settings/">Settings</a>
                             </li>
                         </ul>
                     </div>
                     <div class="uk-navbar-right">
                         <div class="uk-navbar-item ">
-                            <div><a href="#">LOG IN <span uk-icon="heart"></span></a></div>
+                            <div><a href="#">LOG IN</a></div>
                         </div>
                     </div>
                 </nav>
             </div>
         </div>
-        <div class="uk-container">
-            
-        </div>
-        <div class="uk-container">
+        <div class="uk-container fix-top-margin">
             <div class="uk-child-width-1-2@m uk-grid-small uk-grid-match" id="itwiki_frontpage_cards" uk-grid>
             </div>
         </div>
