--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,6 +10,11 @@
     margin-right: 20px;
 }
 
+#itwiki_article_settings{
+    margin-top: 5px;
+    margin-right: 5px;
+}
+
 #itwiki_article_settings:hover{
     color: blue;
 }
@@ -30,4 +35,8 @@
     border-radius: 50%;
     min-width: 150px;
     min-height: 150px;
+}
+
+.inline{
+    display: inline;
 }
