--- a/templates/article.html
+++ b/templates/article.html
@@ -10,6 +10,7 @@
     <script src="/assets/js/uikit.min.js"></script>
     <script src="/assets/js/fontawesome.js"></script>
     <script src="/assets/js/main.js"></script>
+    <script src="/assets/js/article.js"></script>
 </head>
 <body>
     <div class="wrapper uk-background-muted">
@@ -17,19 +18,21 @@
             <div class="uk-container">
                 <nav class="uk-navbar-container dark-background uk-light uk-margin" uk-navbar>
                     <div class="uk-navbar-left">
-                        <a href="/" class="uk-navbar-item uk-logo">itWiki</a>
-                        <ul class="uk-navbar-nav">
-                            <li>
-                                <a href="/add/article/">Add article</a>
-                            </li>
-                            <li>
-                                <a href="/settings/">Settings</a>
-                            </li>
-                        </ul>
+                        <a href="/app" class="uk-navbar-item uk-logo">itWiki</a>
                     </div>
                     <div class="uk-navbar-right">
                         <div class="uk-navbar-item ">
-                            <div><a href="#">LOG IN</a></div>
+                            <div class="uk-inline uk-width-1-1">
+                                <div><i class="fas fa-bars fa-2x"></i>
+                                    <div uk-dropdown="mode: click">
+                                        <ul class="uk-nav uk-dropdown-nav">
+                                            <li class="uk-nav-header" id="itwiki_logged_in_person"></li>
+                                            <li><a href="/app/article/add/">Add article</a></li>
+                                            <li><a href="/app/settings/">Settings</a></li>
+                                            <li><a id="itwiki_logout" href="#">Logout</a></li>
+                                        </ul>
+                                    </div> 
+                            </div>
                         </div>
                     </div>
                 </nav>
@@ -37,22 +40,22 @@
         </div>
         <div class="uk-container uk-card-default fix-top-margin">
             <article class="uk-article uk-card-body">
-                <h1 class="uk-article-title" id="itwiki_article_title">{{.Title}}</h1>
-                <i class="fas fa-cog fa-2x uk-align-right" id="itwiki_article_settings"></i>
+                <h1 class="uk-article-title itwiki_article_title inline "></h1>
+                <i class="fas fa-cog fa-2x uk-float-right" id="itwiki_article_settings"></i>
                 <div uk-dropdown="mode: click">
                     <ul class="uk-nav uk-dropdown-nav">
                         <li class="uk-nav-header">Actions</li>
-                        <li><a href="/edit/article/{{.ArticleID}}">Edit</a></li>
+                        <li><a href="/app/article/edit/">Edit</a></li>
                         <li><a href="#">Vote</a></li>
                         <li class="uk-nav-header">Danger zone</li>
                         <li><a href="#itwiki_modal_delete_article" uk-toggle >Delete article</a></li>
                     </ul>
                 </div>
-                <p class="uk-article-meta">Created at {{.CreationDate}} by admin. Category: {{.CategoryName}}</p>
-                <p>{{.Post}}</p>
+                <p class="uk-article-meta">Created <span id="itwiki_article_created_at"></span> by <span id="itwiki_article_created_by"></span>. Category: <span id="itwiki_article_category"></span></p>
+                <div id="itwiki_article_content_wrapper"></div>
                 <div class="uk-grid-small uk-child-width-auto" uk-grid>
                     <div>
-                        <a class="uk-button uk-button-text" href="/">Back</a>
+                        <a class="uk-button uk-button-text" href="/app">Back</a>
                     </div>
                     <div>
                         <a class="uk-button uk-button-text" href="#">Comments</a>
@@ -64,10 +67,10 @@
     <div id="itwiki_modal_delete_article" uk-modal>
         <div class="uk-modal-dialog uk-modal-body">
             <h2 class="uk-modal-title">Delete article?</h2>
-            <p>You're going to remove article <strong>{{.Title}}</strong> from database</p>
+            <p>You're going to remove article <strong class="itwiki_article_title"></strong> from database</p>
             <p class="uk-text-right">
                 <button class="uk-button uk-button-default uk-modal-close" type="button">Cancel</button>
-                <button class="uk-button uk-button-danger" id="itwiki_article_settings_delete_article" data-id="{{.ArticleID}}" type="button">Delete</button>
+                <button class="uk-button uk-button-danger" id="itwiki_article_settings_delete_article" type="button">Delete</button>
             </p>
         </div>
     </div>
