--- a/templates/settings.html
+++ b/templates/settings.html
@@ -22,13 +22,13 @@
                     <div class="uk-navbar-right">
                         <div class="uk-navbar-item ">
                             <div class="uk-inline uk-width-1-1">
-                                <div><i class="fas fa-2x fa-user"></i>
+                                <div><i class="fas fa-bars fa-2x"></i>
                                     <div uk-dropdown="mode: click">
                                         <ul class="uk-nav uk-dropdown-nav">
                                             <li class="uk-nav-header" id="itwiki_logged_in_person"></li>
-                                            <li><a href="/add/article/">Add article</a></li>
-                                            <li><a href="/settings/">Settings</a></li>
-                                            <li><a href="#">Logout</a></li>
+                                            <li><a href="/app/article/add/">Add article</a></li>
+                                            <li><a href="/app/settings/">Settings</a></li>
+                                            <li><a id="itwiki_logout" href="#">Logout</a></li>
                                         </ul>
                                     </div> 
                             </div>
