--- a/templates/settings.html
+++ b/templates/settings.html
@@ -35,6 +35,9 @@
                         </div>
                     </div>
                 </nav>
+                <div class="uk-alert-warning alert-clearfix" id="itwiki_alert" uk-alert>
+                    <p id="itwiki_alert_text"></p>
+                </div>
             </div>
         </div>
         <div class="uk-container fix-top-margin">
