--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -40,3 +40,34 @@
 .inline{
     display: inline;
 }
+
+table {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+  }
+  
+td, th {
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+tr:nth-child(even){background-color: #f2f2f2;}
+  
+tr:hover {background-color: #ddd;}
+  
+th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: rgb(21,31,39);
+    color: white;
+  }
+
+.alert-clearfix{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 10;
+    display: none;
+}
