--- a/templates/article.html
+++ b/templates/article.html
@@ -36,6 +36,9 @@
                         </div>
                     </div>
                 </nav>
+                <div class="uk-alert-warning alert-clearfix" id="itwiki_alert" uk-alert>
+                    <p id="itwiki_alert_text"></p>
+                </div>
             </div>
         </div>
         <div class="uk-container uk-card-default fix-top-margin">
