--- a/templates/index.html
+++ b/templates/index.html
@@ -23,22 +23,29 @@
                         <div class="uk-navbar-item ">
                             <div class="uk-inline uk-width-1-1">
                                 <div><i class="fas fa-bars fa-2x"></i>
-                                    <div uk-dropdown="mode: click">
-                                        <ul class="uk-nav uk-dropdown-nav">
-                                            <li class="uk-nav-header" id="itwiki_logged_in_person"></li>
-                                            <li><a href="/app/article/add/">Add article</a></li>
-                                            <li><a href="/app/settings/">Settings</a></li>
-                                            <li><a id="itwiki_logout" href="#">Logout</a></li>
-                                        </ul>
-                                    </div> 
+                                <div uk-dropdown="mode: click">
+                                    <ul class="uk-nav uk-dropdown-nav">
+                                        <li class="uk-nav-header" id="itwiki_logged_in_person"></li>
+                                        <li><a href="/app/article/add/">Add article</a></li>
+                                        <li><a href="/app/settings/">Settings</a></li>
+                                        <li><a id="itwiki_logout" href="#">Logout</a></li>
+                                    </ul>
+                                </div> 
                             </div>
                         </div>
                     </div>
                 </nav>
+                <div class="uk-alert-warning alert-clearfix" id="itwiki_alert" uk-alert>
+                    <p id="itwiki_alert_text"></p>
+                </div>
             </div>
         </div>
-        <div class="uk-container fix-top-margin">
-            <div class="uk-child-width-1-2@m uk-grid-small uk-grid-match" id="itwiki_frontpage_cards" uk-grid>
+        <div class="uk-container fix-top-margin ">
+            <div class="uk-card uk-card-default uk-card-body">
+                <div><p>Статей добавлено: <span class="uk-label" id="itwiki_total_articles"></span></p></div>
+                <hr />
+                <ul class="uk-list uk-list-divider uk-list-decimal" id="itwiki_ul_container">
+                </ul>
             </div>
         </div>
     </div>
